--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,12 +7,16 @@
     <meta name="theme-color" content="#4169E1" />
     <meta
       name="description"
-      content="EuroDachshund - kasyno internetowe"
+      content="euro-jamniki.pl - gry losowe - demo kasyna internetowego. Koło fortuny, jednoręki bandyta, loteria liczbowa."
+    />
+    <meta
+      name="keywords"
+      content="Jamnik, Dachshund, EuroDachshund, Kasyno, Kasyno internetowe, euro-jamniki, euro-dachshund, loteria, kumulacja, kasyno jamnikowe, waluta euro jamnik, polski jamnik, jednoręki bandyta, koło fortuny"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>
-      EuroDachshund
+      Euro-jamniki.pl | demo kasyna internetowego
     </title>
   </head>
   <body>
