SEO changes - added MetaTags (Helmet)

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#4169E1" />
     <meta
-      name="description"
-      content="euro-jamniki.pl - gry losowe - demo kasyna internetowego. Koło fortuny, jednoręki bandyta, loteria liczbowa."
-    />
-    <meta
       name="keywords"
-      content="Jamnik, Dachshund, EuroDachshund, Kasyno, Kasyno internetowe, euro-jamniki, euro-dachshund, loteria, kumulacja, kasyno jamnikowe, waluta euro jamnik, polski jamnik, jednoręki bandyta, koło fortuny"
+      content="Jamnik, Dachshund, EuroJamnik, EuroDachshund, DolarDachshund, darmowe kasyno, darmowe gry, gierki, polski jamnik, Kasyno, Kasyno internetowe, euro-jamniki, euro-dachshund, loteria, kumulacja, kasyno jamnikowe, waluta euro jamnik, polski jamnik, jednoręki bandyta, koło fortuny"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
